# CMake

./: CMakeLists.txt
include/glad/: glad.h
src/: app.cpp  glad.c
